--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(trips['trip_distance], trips[trip_distance], trips[trip_distance])"
+    "    return list(trips['trip_distance'], trips['pickup_latidute'], trips[trip_distance])"
    ]
   },
   {
