Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(trips['trip_distance'], trips['pickup_latidute'], trips[trip_distance])"
+    "    return list(trips['trip_distance'], trips['pickup_latidute'], trips['pickup_longitude'])"
    ]
   },
   {
